--- a/.npmrc
+++ b/.npmrc
@@ -51,5 +51,5 @@ local-prefix=./
 only=production
 
 # Custom settings for private npm scopes (if applicable)
-@your-scope:registry=https://your-custom-registry-url/
-//your-custom-registry-url/:_authToken=your-private-scope-auth-token
+# @your-scope:registry=https://your-custom-registry-url/
+# //your-custom-registry-url/:_authToken=your-private-scope-auth-token
